creating social login using Socialite ...

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,15 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+
+TWITTER_ID=
+TWITTER_SECRET=
+TWITTER_URL=http://local.laravel/auth/twitter/callback
+
+GITHUB_ID=
+GITHUB_SECRET=
+GITHUB_URL=http://local.laravel/auth/github/callback
+
+FACEBOOK_ID=
+FACEBOOK_SECRET=
+FACEBOOK_URL=http://local.laravel/auth/facebook/callback
